--- a/templates/clienst.html
+++ b/templates/clienst.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Annie</title>
+    <title>Clients</title>
 
     <!-- Font Awesome -->
     <link
