--- a/templates/home.html
+++ b/templates/home.html
@@ -23,6 +23,12 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.css"
         rel="stylesheet"
         />
+        <style>
+            body {
+
+  background-image: url("https://i.pinimg.com/474x/e7/8d/1a/e78d1a3e619d49363f5b8869906ab2b4.jpg");
+}
+        </style>
 </head>
 <body>
             <!-- Navbar -->
