--- a/templates/clienst.html
+++ b/templates/clienst.html
@@ -103,12 +103,12 @@ background-image: url("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAA
                     {% for cloth in clothes %}
                   <tr>
                     <td><p class="fw-bold mb-1">{{cloth.client_name}}</p></td>
-                    <td><p class="fw-normal mb-1">{{cloth.check_in_date}} 
-                        <!-- <span class="badge badge-success">{{cloth.check_in_time}}</span> -->
+                    <td><p class="fw-normal mb-1">{{cloth.check_in_date|date:"M Y d"}} 
+                        <span class="badge badge-success">{{cloth.check_in_time}}</span>
 
                         </p></td>
-                    <td><p class="fw-normal mb-1">{{cloth.check_out_date}} 
-                        <!-- <span class="badge badge-success">{{cloth.check_out_time}}</span> -->
+                    <td><p class="fw-normal mb-1">{{cloth.check_out_date|date:"M Y d"}} 
+                        <span class="badge badge-success">{{cloth.check_out_time}}</span>
 
                         </p></td>
                     <td><p class="fw-normal mb-1">
