--- a/templates/clienst.html
+++ b/templates/clienst.html
@@ -104,7 +104,7 @@ background-image: url("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAA
                   <tr>
                     <td><p class="fw-bold mb-1">{{cloth.client_name}}</p></td>
                     <td><p class="fw-normal mb-1">{{cloth.check_in_date|date:"M Y d"}} 
-                        <!-- <span class="badge badge-success">{{cloth.check_in_time}}</span> -->
+                        <span class="badge badge-success">{{cloth.check_in_time}}</span>
 
                         </p></td>
                     <td><p class="fw-normal mb-1">{{cloth.check_out_date|date:"M Y d"}} 
