--- a/templates/update.html
+++ b/templates/update.html
@@ -38,7 +38,7 @@
     <!-- Container wrapper -->
     <div class="container">
       <!-- Navbar brand -->
-      <a class="navbar-brand me-2" href="{% url 'home' %}">HOME
+      <a class="navbar-brand me-2" href="{% url 'home' %}">Laundry services
       </a>
   
       <!-- Toggle button -->
@@ -59,7 +59,7 @@
         <!-- Left links -->
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a href="{% url 'clients' %}" class="btn btn-outline-primary btn-lg mt-2"> View all Clients</a>
+            <!-- <a href="{% url 'clients' %}" class="btn btn-outline-primary btn-lg mt-2"> View all Clients</a> -->
         
           </li>
           <li class="justify-content-center ">
