--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
@@ -42,12 +43,18 @@
                     <a href="{% url 'home' %}">Go back</a>
                 </span></p>
                 {% else %}
-                <p class="text-center">Login</p>
+                <div class="text-center">
+                <img class="img-fluid" src="{% static 'img/logog.png' %}" width="100" height="100"alt="logo">
+            </div>
+                <!-- <p class="text-center">Login</p> -->
                 <form action="" method="post">
                     {% csrf_token %}
                     {{form|crispy}}
-                    <button type="submit" class="btn btn-outline-primary btn-lg mt-2">  Login</button>
-                    <p class="mt-2 mb-2"><a href="{% url 'password_reset' %}">Reset Password</a></p>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-outline-primary btn-lg mt-2">  Login</button>
+                    </div>
+                    
+                    <!-- <p class="mt-2 mb-2"><a href="{% url 'password_reset' %}">Reset Password</a></p> -->
                 </form>
           
                 {% endif %}
