--- a/templates/home.html
+++ b/templates/home.html
@@ -66,6 +66,9 @@
           <button type="button" class="btn btn-outline-primary btn-md m-2" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             Add service
           </button>
+          <a type="button" class="btn btn-outline-primary btn-md m-2" data-mdb-toggle="modal" data-mdb-target="#clientModal">
+            Add Client
+          </a>
           <li class="nav-item">
             <a href="{% url 'logout' %}" class="btn btn-outline-primary btn-md m-2">LOGOUT</a>
         
@@ -94,7 +97,7 @@
     <!-- Container wrapper -->
   </nav>
   <!-- Navbar -->
-  <div  class="container mt-4 mb-4 align-items-center justify-content-center">
+  <!-- <div  class="container mt-4 mb-4 align-items-center justify-content-center">
     <div class="row mt-4 mb-4">
         <div class="col-md-3 mt-4 mb-4 p-3">
             <p class="text-center"></p>
@@ -120,7 +123,7 @@
         </div>
 
     </div>
-</div>
+</div> -->
 
   <div id="addclient" class="container mt-4 mb-4">
     <div class="row mt-4 mb-4">
@@ -274,6 +277,31 @@
   </div>
 </div>
 
+
+<!-- Modal -->
+<div class="modal fade" id="clientModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <p class="modal-title" id="exampleModalLabel">Add Client</p>
+        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="card mt-2 mb-2 shadow-sm">
+          <div class="card-body">
+              <form action="" method="post">
+                  {% csrf_token %}
+                  {{form|crispy}}
+                  <button type="submit" class="btn btn-outline-primary btn-lg mt-2">Add Client</button>
+              </form>
+          </div>
+      </div>
+
+      </div>
+
+    </div>
+  </div>
+</div>
 <!-- MDB -->
 
 <script
