added logo to home and update pages

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
@@ -38,7 +40,14 @@
     <!-- Container wrapper -->
     <div class="container">
       <!-- Navbar brand -->
-      <a class="navbar-brand me-2" href="{% url 'home' %}">Laundry services
+      <a class="navbar-brand me-2" href="{% url 'home' %}">
+        <img
+        src="{% static 'img/logog.png' %}"
+        height="60"
+        width="100"
+        alt="Logo"
+        loading="lazy"
+      />
       </a>
   
       <!-- Toggle button -->
